<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Invite</string>

    <!-- FUNCIONALIDADES -->
    <string name="login">Login</string>
    <string name="convite">Convite</string>
    <string name="eventos">Eventos</string>
    <string name="detalhes_evento">Detalhes do evento</string>
    <string name="comprovante_participacao">Comprovante de participação</string>
    <string name="cadastro">Cadastro</string>
    <string name="qr_code">QR-Code</string>
    <string name="comprovante">Comprovante</string>

    <!-- ALERTAS -->
    <string name="inserir_cpf">Insira seu CPF</string>
    <string name="gerar_qrcode">Gerar QR-Code</string>
    <string name="gerar_convite">Gerar Convite</string>

    <!-- INFORMATIVOS -->
    <string name="inf_gera_convite">Gerando convite</string>
    <string name="inf_sucesso_gera_convite">Convite gerado</string>
    <string name="inf_carregamento">Loading</string>
    <string name="inf_download_convite">Download do convite em PDF</string>
    <string name="inf_download_comprovante">Download do comprovante em PDF</string>

    <!-- DESCRIÇÕES -->
    <string name="descricao_logo">Logo</string>
    <string name="descricao_fab_add">ADD</string>
    <string name="inf_erro_gera_convite">Problema ao tentar gerar o Qr-Code</string>

    <!-- ITENS EVENTO -->
    <string name="nome_do_evento">Nome do Evento:</string>
    <string name="data_do_evento">Data:</string>
    <string name="hora_do_evento">Hora:</string>
    <string name="local_do_evento">Local do Evento:</string>
</resources>