<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:contentDescription="@string/descricao_logo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/inter"
                android:text="@string/eventos"
                android:textColor="#fff"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_anchor="@+id/appbar"
                app:layout_anchorGravity="top|center" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rl_convite"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:background="#F5F4F4"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <ImageView
            android:id="@+id/iv_ic_convite"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/descricao_logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_funcionalidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/iv_ic_convite"
            android:fontFamily="@font/inter"
            android:text="@string/detalhes_evento"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_anchorGravity="top|center" />

        <TextView
            android:id="@+id/tv_nome_evento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_ic_convite"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_horario_evento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_nome_evento"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_local_evento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_horario_evento"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_patrocinador_evento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_local_evento"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_descricao_evento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_patrocinador_evento"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_confirma_gerar_convite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_convite"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/gerar_convite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_convite" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_home" />
</androidx.constraintlayout.widget.ConstraintLayout>