<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center_vertical"
                    android:background="#00000000"
                    android:contentDescription="@string/descricao_logo"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/inter"
                    android:text="@string/app_name"
                    android:textColor="#fff"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_anchor="@+id/appbar"
                    app:layout_anchorGravity="top|center" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.ComprovanteActivity">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_convite"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="#F5F4F4"
                app:cardCornerRadius="20dp"
                app:layout_anchorGravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_img_convite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/descricao_logo"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/tv_depoisVejo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/inter"
                    android:text="Convite"
                    android:textColor="#000"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_anchor="@+id/cv_convite"
                    app:layout_anchorGravity="top|center" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginEnd="355dp"
        android:contentDescription="@string/descricao_fab_add"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>